# SubView

./: .gitignore  CMakeLists.txt  README.md  config.txt  display.h  files.h  list.c  list.h  main.c  struct.h
macOS/: SubView.icns  logo.psd
